# AI-smart-harvest

./: Dockerfile  README.md  SUBMISSION.md  agent_inference.py  app.py  blog.md  gradio_ui.py  inference.py  openenv.yaml  push_to_hf.py  pyproject.toml  requirements-round1.md  requirements-round2.md  run_inference.py  server_with_agent.py  train_dqn.py  train_multitask.py
crop_env/: __init__.py  env.py  graders.py  models.py  payoff.py  scenarios.py  simulator.py
models/: dqn_drought_year.pth  dqn_drought_year_stats.json  dqn_ideal_season.pth  dqn_ideal_season_stats.json  dqn_model.pth  dqn_model_stats.json  dqn_multitask.pth  dqn_multitask_stats.json  dqn_regulatory_shift.pth  dqn_regulatory_shift_stats.json  dqn_supply_chain_disruption.pth  dqn_supply_chain_disruption_stats.json  dqn_variable_weather.pth  dqn_variable_weather_stats.json  training_summary.json
server/: app.py
tests/: test_env.py  test_graders.py  test_payoff.py  test_simulator.py
