[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-openenv"
version = "0.1.0"
description = "Outcome-based crop management simulator (OpenEnv)"
authors = [
    { name = "Thulasi" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic",
    "numpy",
    "openai",
    "openenv-core>=0.2.0"
]

# ✅ THIS FIXES "missing server entry point"
[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crop_env*"]