[project]
name = "ai-smart-harvest"
version = "0.1.0"
description = "AI-Smart-Harvest: A crop environment with RL agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "numpy>=1.24",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
