[project]
name = "ai-smart-harvest"
version = "0.1.0"
description = "AI-Smart-Harvest: A crop environment with RL agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "numpy>=1.24",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["crop_env"]
